# picoc

./: .gitignore  CMakeLists.txt  Makefile  README  heap.c  interpreter.h  parse.c  picoc.c  picoc.h  platform.c  platform.h
platform/: library_freertos.c  platform_freertos.c
tests/: Makefile
